tests/baselines/reference/returnTypeParameter.errors.txt
==== tests/cases/compiler/returnTypeParameter.ts (2 errors) ====
    function f<T>(a: T): T { } // error, no return statement
                         ~
!!! error TS2131: Function declared a non-void return type, but has no return expression.
    function f2<T>(a: T): T { return T; } // bug was that this satisfied the return statement requirement
                                     ~
!!! error TS2095: Could not find symbol 'T'.